# Calculator-for-MacOS

./: README_RUS.md
src/: Makefile  manual.html
src/SimpleCalculMy/: CMakeLists.txt  CMakeLists.txt.user.8547710  main.cc
src/SimpleCalculMy/Controller/: controller.cc  controller.h
src/SimpleCalculMy/Model/: model.cc  model.h
src/SimpleCalculMy/View/: mainwindow.cc  mainwindow.h  mainwindow.ui
src/build-SimpleCalculMy-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-SimpleCalculMy-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.54128CD62F57B459.idx  QCache.6F21E33C777CF509.idx  QDateTime.71C40B70E18EB569.idx  QElapsedTimer.353D6DF9CA4317B0.idx  QFlags.445D8E2DE1147741.idx  QKeyEvent.C9D174AB8948D02E.idx  QList.B12D367BEB0E2AF1.idx  QMainWindow.2FF77012D7C3523F.idx  QMargins.A1623A5C547219BC.idx  QMouseEvent.710E37BF9B1E1B63.idx  QMultiMap.620A883E9FF9F694.idx  QObject.4E38B4DD6599C762.idx  QPaintEvent.23EBACCE1CA0285C.idx  QPainterPath.2C91FADA464DA457.idx  QPointer.AFE0A694B0DEEC35.idx  QSharedPointer.0B89ABDDEA128888.idx  QStack.3F14ACE1CC20743A.idx  QString.01090FD3C64518BB.idx  QTimeZone.85F5935D8BEE5B0F.idx  QVector.E09971CC386BF9FB.idx  QWheelEvent.B9DCBB4AF5B3AC89.idx  QtNumeric.23B4FFD2888D7020.idx  QtPrintSupport.EED489D411E1EE2B.idx  QtPrintSupportDepends.B400CB787D907424.idx  __config.EB16E4B7C8D059CC.idx  __locale.2D32E9862A6228BF.idx  __stddef_max_align_t.h.266C203B02A1A4EA.idx  __wmmintrin_aes.h.1A8AD4BF903DEF73.idx  __wmmintrin_pclmul.h.AB9FD564A585B2E6.idx  _types.h.F1421D7767430CF2.idx  adxintrin.h.4A9F841696EA1217.idx  amxintrin.h.8482E2E9369A3934.idx  avx2intrin.h.C94128109584BB18.idx  avx512bf16intrin.h.BE089CA18A6A0770.idx  avx512bitalgintrin.h.4F077F5393E8F07A.idx  avx512bwintrin.h.B5D097212C795655.idx  avx512cdintrin.h.210E484AA32467E8.idx  avx512dqintrin.h.71D499F6E2E2762E.idx  avx512erintrin.h.DF6795FD41E4BEB4.idx  avx512fintrin.h.3E5C0E9741692606.idx  (+225 more)
src/test/: tests.cc
